forts/manifests/qix-sessions.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    pprof/port: "8080"
    pprof/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
    prometheus.io/scrape_high_cardinality: "true"
  labels:
    app: qix-sessions
    chart: qix-sessions-10.94.0
    heritage: Helm
    release: qix-sessions
  name: qix-sessions
spec:
  ports:
    - name: qix-sessions
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: qix-sessions
    release: qix-sessions
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9090"
    prometheus.io/scrape: "true"
  labels:
    app: qix-sessions-operator-metrics
    chart: qix-sessions-10.94.0
    heritage: Helm
    release: qix-sessions
  name: qix-sessions-operator-metrics
spec:
  ports:
    - name: oper-metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: qix-sessions
    release: qix-sessions
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9091"
    prometheus.io/scrape: "true"
  labels:
    app: qix-sessions-crd-metrics
    chart: qix-sessions-10.94.0
    heritage: Helm
    release: qix-sessions
  name: qix-sessions-crd-metrics
spec:
  ports:
    - name: crd-metrics
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    app: qix-sessions
    release: qix-sessions
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qix-sessions
    chart: qix-sessions-10.94.0
    heritage: Helm
    release: qix-sessions
  name: qix-sessions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qix-sessions
      release: qix-sessions
  template:
    metadata:
      labels:
        app: qix-sessions
        messaging-nats-client: "true"
        release: qix-sessions
    spec:
      containers:
        - command:
            - /qix-sessions
            - --logtostderr
          image: ghcr.io/qlik-download/qix-sessions:10.94.0
          imagePullPolicy: null
          livenessProbe:
            httpGet:
              path: /live
              port: 8080
            timeoutSeconds: 5
          name: qix-sessions
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /secrets
              name: secrets
              readOnly: true
            - mountPath: /etc/ssl/certs
              name: ca-certificates
            - mountPath: /run/secrets/qlik.com/qliksense
              name: qliksense-secrets
      imagePullSecrets:
        - name: artifactory-docker-secret
      serviceAccountName: qix-sessions
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            name: qix-sessions-configmap
          name: qix-sessions-configmap
        - name: secrets
          secret:
            secretName: qix-sessions-secrets
        - name: ca-certificates
          persistentVolumeClaim:
            claimName: ca-certificates
        - name: qliksense-secrets
          secret:
            secretName: qliksense-secrets
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: qix-sessions
    chart: qix-sessions-10.94.0
    heritage: Helm
    release: qix-sessions
  name: qix-sessions
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: qix-sessions
                port:
                  number: 8080
            path: /api/v1/selectors
            pathType: Prefix
          - backend:
              service:
                name: qix-sessions
                port:
                  number: 8080
            path: /api/v1/engines
            pathType: Prefix
